--- a/testing-charts/common-test/tests/controller/additional_controller_test.yaml
+++ b/testing-charts/common-test/tests/controller/additional_controller_test.yaml
@@ -17,7 +17,7 @@ tests:
     asserts:
       - isKind:
           of: Deployment
-      - isNull:
+      - notExists:
           path: metadata.annotations
       - equal:
           path: metadata.labels
