--- a/testing-charts/common-test/tests/ingress/values_test.yaml
+++ b/testing-charts/common-test/tests/ingress/values_test.yaml
@@ -45,6 +45,7 @@ tests:
         enabled: true
         hosts:
           - host: "{{ .Release.Name }}.hostname"
+            paths: []
     asserts:
       - documentIndex: &IngressDocument 2
         isKind:
