--- a/testing-charts/common-test/tests/pvc/metadata_test.yaml
+++ b/testing-charts/common-test/tests/pvc/metadata_test.yaml
@@ -10,8 +10,9 @@ tests:
         isKind:
           of: PersistentVolumeClaim
       - documentIndex: *PersistentVolumeClaimDocument
-        isNull:
+        equal:
           path: metadata.annotations
+          value: null
       - documentIndex: *PersistentVolumeClaimDocument
         equal:
           path: metadata.labels
